ambassador-tracing/2.3.0-ot.yml
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: otel-agent-conf
#   labels:
#     app: opentelemetry
#     component: otel-agent-conf
# data:
#   otel-agent-config: |
#     receivers:
#       opencensus:
#         keepalive:
#           server_parameters:
#             max_connection_age: 120s
#             max_connection_age_grace: 30s
#       zipkin:
#         endpoint: "localhost:9411"
#     processors:
#       queued_retry:
#         num_workers: 16
#         queue_size: 10000
#         retry_on_failure: true
#       batch:
#         send_batch_size: 1024
#         timeout: 5s
#     extensions:
#       health_check: {}
#     exporters:
#       logging:
#         loglevel: debug
#       jaeger_grpc:
#         endpoint: jaeger.tracing:14250
#       zipkin:
#         url: "http://jaeger.tracing:9411/api/v2/spans"
#     service:
#       extensions: [health_check]
#       pipelines:
#         traces/1:
#           receivers: [opencensus, zipkin]
#           processors: [batch, queued_retry]
#           exporters: [jaeger_grpc, logging, zipkin]
# ---
# apiVersion: apps/v1
# kind: DaemonSet
# metadata:
#   name: otel-agent
#   labels:
#     app: opentelemetry
#     component: otel-agent
# spec:
#   selector:
#     matchLabels:
#       app: opentelemetry
#       component: otel-agent
#   template:
#     metadata:
#       labels:
#         app: opentelemetry
#         component: otel-agent
#     spec:
#       containers:
#       - command:
#           - "/otelcol"
#           - "--config=/conf/otel-agent-config.yaml"
#         image: otel/opentelemetry-collector:0.3.0
#         name: otel-agent
#         resources:
#           limits:
#             cpu: 500m
#             memory: 500Mi
#           requests:
#             cpu: 100m
#             memory: 100Mi
#         ports:
#         - containerPort: 55678 # Default Opencensus receiver port.
#         - containerPort: 55679 # ZPages endpoint.
# #        - containerPort: 14267 # Default Jaeger TChannel port.
# #        - containerPort: 14268 # Default Jaeger HTTP receiver port.
#         - containerPort: 9411 # Default Zipkin receiver port.
#         volumeMounts:
#         - name: otel-agent-config-vol
#           mountPath: /conf
#       volumes:
#         - configMap:
#             name: otel-agent-conf
#             items:
#               - key: otel-agent-config
#                 path: otel-agent-config.yaml
#           name: otel-agent-config-vol
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: otel-agent
#   labels:
#     app: opencensus
#     component: otel-agent
# spec:
#   ports:
#   - name: opencensus # Default endpoint for Opencensus receiver.
#     port: 55678
#     protocol: TCP
#     targetPort: 55678
#   # - name: jaeger-tchannel  # Default endpoint for Jaeger TChannel receiver.
#   #   port: 14267
#   # - name: jaeger-thrift-http # Default endpoint for Jaeger HTTP receiver.
#   #   port: 14268
#   - name: zipkin # Default endpoint for Zipkin receiver.
#     port: 9411
#   - name: metrics # Default endpoint for querying metrics.
#     port: 8888
#   selector:
#     component: otel-agent
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: opencensus
    component: otel-collector
spec:
  ports:
  - name: opencensus # Default endpoint for Opencensus receiver.
    port: 55678
    protocol: TCP
    targetPort: 55678
  # - name: jaeger-tchannel  # Default endpoint for Jaeger TChannel receiver.
  #   port: 14267
  # - name: jaeger-thrift-http # Default endpoint for Jaeger HTTP receiver.
  #   port: 14268
  - name: zipkin # Default endpoint for Zipkin receiver.
    port: 9411
  - name: metrics # Default endpoint for querying metrics.
    port: 8888
  selector:
    component: otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1 #TODO - adjust this to your own requirements
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/trace-collector: otel-collector.tracing:55678
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8888"
        prometheus.io/scrape: "true"
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - command:
          - "/otelcol"
          - "--config=/conf/otel-collector-config.yaml"
#           Memory Ballast size should be max 1/3 to 1/2 of memory.
          - "--mem-ballast-size-mib=683"
          - "--log-level=debug"
        image: otel/opentelemetry-collector:0.3.0
        name: otel-collector
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 55678 # Default endpoint for Opencensus receiver.
        # - containerPort: 14267 # Default endpoint for Jaeger TChannel receiver.
        # - containerPort: 14268 # Default endpoint for Jaeger HTTP receiver.
        - containerPort: 9411 # Default endpoint for Zipkin receiver.
        - containerPort: 8888  # Default endpoint for querying metrics.
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
#        - name: otel-collector-secrets
#          mountPath: /secrets
        livenessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
        readinessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
      # - image: gcr.io/linkerd-io/debug:edge-20.4.2
      #   imagePullPolicy: IfNotPresent
      #   name: linkerd-debug
      #   resources: {}
      #   securityContext:
      #     allowPrivilegeEscalation: false
      #     capabilities:
      #       add:
      #       - NET_ADMIN
      #       - NET_RAW
      #     privileged: false
      #     readOnlyRootFilesystem: true
      #     runAsNonRoot: false
      #     runAsUser: 0
      #   terminationMessagePath: /dev/termination-log
      #   terminationMessagePolicy: FallbackToLogsOnError
      #   volumeMounts:
      #   - mountPath: /tmp
      #     name: empty-dir-tmp
      volumes:
        - emptyDir: {}
          name: empty-dir-tmp
        - configMap:
            name: otel-collector-conf
            items:
              - key: otel-collector-config
                path: otel-collector-config.yaml
          name: otel-collector-config-vol
#        - secret:
#            name: otel-collector-secrets
#            items:
#              - key: cert.pem
#                path: cert.pem
#              - key: key.pem
#                path: key.pem
