ambassador-tracing/ambassador-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
  namespace: ambassador
spec:
  type: NodePort
  ports:
   - port: 8080
     targetPort: 8080
  selector:
    service: ambassador
