ambassador-tracing/jaeger.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jaeger
  namespace: tracing
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.17
        ports:
        - name: collection
          containerPort: 14268
        - name: ui
          containerPort: 16686
        - name: grpc
          containerPort: 14250
        resources:
            requests:
              memory: 100Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: tracing
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - name: collection
    port: 14268
  - name: ui
    port: 16686
  - name: grpc
    port: 14250
