ambassador-tracing/ambassador-ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
  #     grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
  name: ambassador-ingress
  namespace: ambassador
spec:
  backend:
    serviceName: ambassador
    servicePort: 8080
